[0, 15, 71]: 2018-09-26
  - fix regression where handcrafted CommentedMaps could not be initiated (reported by 
    `Dan Helfman <https://bitbucket.org/dhelfman/>`__)
  - fix regression with non-root literal scalars that needed indent indicator
    (reported by `Clark Breyman <https://bitbucket.org/clarkbreyman/>`__)
  - tag:yaml.org,2002:python/object/apply now also uses __qualname__ on PY3
    (reported by `Douglas RAILLARD <https://bitbucket.org/DouglasRaillard/>`__)

[0, 15, 70]: 2018-09-21
  - reverted CommentedMap and CommentedSeq to subclass ordereddict resp. list,
    reimplemented merge maps so that both ``dict(**commented_map_instance)`` and JSON
    dumping works. This also allows checking with ``isinstance()`` on ``dict`` resp. ``list``.
    (Proposed by `Stuart Berg <https://bitbucket.org/stuarteberg/>`__, with feedback
    from `blhsing <https://stackoverflow.com/users/6890912/blhsing>`__ on
    `StackOverflow <https://stackoverflow.com/q/52314186/1307905>`__)

[0, 15, 69]: 2018-09-20
  - fix issue with dump_all gobbling end-of-document comments on parsing
    (reported by `Pierre B. <https://bitbucket.org/octplane/>`__)

[0, 15, 68]: 2018-09-20
  - fix issue with parsabel, but incorrect output with nested flow-style sequences
    (reported by `Dougal Seeley <https://bitbucket.org/dseeley/>`__)
  - fix issue with loading Python objects that have __setstate__ and recursion in parameters
    (reported by `Douglas RAILLARD <https://bitbucket.org/DouglasRaillard/>`__)

[0, 15, 67]: 2018-09-19
  - fix issue with extra space inserted with non-root literal strings 
    (Issue reported and PR with fix provided by 
    `Naomi Seyfer <https://bitbucket.org/sixolet/>`__.)

[0, 15, 66]: 2018-09-07
  - fix issue with fold indicating characters inserted in safe_load-ed folded strings
    (reported by `Maximilian Hils <https://bitbucket.org/mhils/>`__).

[0, 15, 65]: 2018-09-07
  - fix issue #232 revert to throw ParserError for unexcpected ``]``